2002-xx-xx v0.xx:
  * Add --decode arg so -k and -K can be negated.
  * Change -K's long arg from --keep2 to --no-decode to be more descriptive.
  * Make ngetlite check if the tempfile already exists and skip retrieving that article (in case it was already downloaded by nget.)

2002-10-28 v0.22.1:
  * Fix segv on saving text file if no uulib info was recorded.
  * Fix bug introduced in 0.22 where a textfile would be generated even if there were decode errors.
  * Fix ngetlite handling of servers that do a shutdown on the socket after an error (as opposed to just closing.)

2002-10-18 v0.22:
  * With fullxover=2, don't needlessly retrieve article list if all cached headers are older than all available headers.
  * Fix group/grouplist typo in manpage exit status warnings section.
  * Add "xover" exit warning status.
  * Workaround rare streaming bug in DNEWS servers that drops the end part of a xover reply (by disabling streaming and trying again.)
  * Allow -p to create missing directories recursively (with --makedirs) and add # setting for makedirs.
  * Add fatal_user_errors ngetrc setting to make user errors cause an immediate exit rather than continuing if possible.
  * Add -x option to retrieve based on XPAT searches rather than retrieving all headers and using a cache file. (suggested by Naveen Nathan)
  * Add -X option to search group list server-side rather than retrieving the full group list and using a cache file.
  * Fix segv on || or && in -R with less than 2 items on the stack.
  * Accept invalid dates with 1 digit hours/minutes/seconds or space padded hours.
  * Update cppunit tests to cppunit 1.8.0 style.
  * Add --text option (and corresponding .ngetrc option) to configure how nget handles text posts. (possible values of "files"(default, same as previous versions), "mbox"(store all text posts in one mbox format file, suggested by Steven Mueller), "ignore"(ignore all text posts, suggested by Naveen Nathan))